# trovis-modbus

./: README.md  pyproject.toml
script/: query.py
src/trovis_modbus/: __init__.py  clock.py  component.py  components.py  controller.py  curve.py  device_info.py  enums.py  exceptions.py  fields.py  heating_circuit.py  hot_water.py  metadata.py  model.py  options.py  ranges.py  sensors.py  trovis.py  utils.py
tests/: conftest.py  test_canonical_parity.py  test_device.py  test_query_cli.py
tests/reference/: canonical_points.json
