[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trovis-modbus"
version = "0.0.0"
description = "Read a Samson Trovis 557x heating controller over Modbus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Trovis Modbus contributors" }]
keywords = ["modbus", "trovis", "samson", "heating", "home-assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
# Protocol + the device-modelling framework (modbus_connection.model). The caller
# injects a ModbusUnit built from whichever backend they choose.
dependencies = ["modbus-connection>=3.4.1,<4"]

[project.optional-dependencies]
# Concrete backend for the script/query.py CLI (pip install trovis-modbus[cli]).
cli = ["modbus-connection[pymodbus]>=3.4.1,<4"]

[project.urls]
Homepage = "https://github.com/Tom-Bom-badil/trovis-modbus"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    # Tests run against the in-memory mock backend that ships with
    # modbus-connection (its pytest plugin is auto-registered); no real backend
    # or server is needed.
]

[tool.hatch.build.targets.wheel]
packages = ["src/trovis_modbus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
